--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <img src="https://picsum.photos/300/180?6" class="card-img-top" style="object-fit: cover;" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Somes quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">En savoir plus</a>
                     </div>
                 </div>
